# LearnCppBase

mySmartPointer/: CMakeLists.txt  main.cpp  mysmartpointer.hpp
myString/: .gitignore  CMakeLists.txt  main.cpp  mystring.cpp  mystring.h
